--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Jemigelato.github.io</title>
+
+    <script src="http://static.ustream.tv/js/libs/ustream-embedapi.js"></script>
   </head>
 
   <body>
@@ -27,37 +29,45 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p>Hello Embed API Demo!</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+        <!-- <script src="js/vendor/ustream-embedapi.js"></script> -->
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        <div>
+            <iframe id="UstreamIframe" width="96" height="65" src="http://www.ustream.tv/embed/1524" scrolling="no" frameborder="0" style="margin-top: -96px;border : 0px none transparent;"></iframe>
+        </div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+        <button onclick="$ustreamAPI.callMethod('play')">[ > ] Play</button>
+        <button onclick="$ustreamAPI.callMethod('pause')">[ || ] Pause</button>
+        <button onclick="$ustreamAPI.callMethod('volume', 0)">[ ? ] Mute</button>
+        <button onclick="$ustreamAPI.callMethod('volume', 100)">[ )) ] Unmute</button>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+        <script>
+            $videoW = 1920;
+            $videoH = 1080;
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+            window.restoreSize = function ()
+            {
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+                $extraH = 200;
+                $barH = 32;
+                $videoContainer.style.height = ($videoH+$extraH)+"px";
+                $videoContainer.style.width = $videoW+"px";
+                $videoContainer.style.marginTop = "-"+($extraH/2-$barH/2)+"px";
+                $videoContainer.parentNode.style.width = $videoW;
+                $videoContainer.parentNode.style.height = $videoH;
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+            }
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+            $videoContainer = document.getElementById('UstreamIframe');
+            $videoContainer.parentNode.style.overflow = 'hidden';
+            $ustreamAPI = UstreamEmbed('UstreamIframe');
+            $ustreamAPI.addListener('playing', restoreSize);
+        </script>
       </section>
     </div>
 
@@ -68,7 +78,7 @@ $ git checkout gh-pages
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
