--- a/sample/index.html
+++ b/sample/index.html
@@ -14,7 +14,7 @@
 
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-        <script src="../src/ustream-embedapi.javascript"></script>
+        <script src="../js/vendor/ustream-embedapi.javascript"></script>
 
         <style type="text/css">
             body {
